Make sure double border on week row goes all the way across the div

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -173,6 +173,8 @@ display: none;
   width: 100%;
   height: 25px;
   margin: auto;
+  padding-left: 5px;
+  padding-right: 5px;
   text-align: center;
   vertical-align: middle;
   line-height: 25px;
